# tetris.cpp

./: CMakeLists.txt  README.md
include/: board.hpp  config.h.in  const.hpp  consts.hpp  core.hpp  move.hpp  piece.hpp  pieces.hpp  term.hpp  tetris.hpp  types.hpp  vis.hpp
src/: board.cpp  core_board.cpp  core_piece.cpp  main.cpp  piece.cpp  vis.cpp
